# culpa

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.sh  start.sh  test_agent.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: CommandPalette.tsx  EventDetail.tsx  FileChangeDetail.tsx  ForkModal.tsx  KeyboardShortcutsHelp.tsx  LLMCallDetail.tsx  Logo.tsx  ReplayControls.tsx  SessionOverview.tsx  Skeleton.tsx  TerminalDetail.tsx  Timeline.tsx
dashboard/src/contexts/: AuthContext.tsx
dashboard/src/hooks/: useFork.ts  useReplay.ts  useSession.ts
dashboard/src/lib/: types.ts  utils.ts
dashboard/src/pages/: ApiKeys.tsx  Billing.tsx  BillingSuccess.tsx  Landing.tsx  Login.tsx  Register.tsx  SessionCompare.tsx  SessionDetail.tsx  SessionsList.tsx  Team.tsx
docs/: claude-code-setup.md  cursor-setup.md  custom-agents.md
examples/: basic_recording.py  demo_session.py  fork_example.py  replay_example.py
sdk/culpa/: __init__.py  cli.py  fork.py  models.py  proxy.py  proxy_parser.py  recorder.py  replay.py
sdk/culpa/interceptors/: __init__.py  anthropic.py  litellm.py  openai.py
sdk/culpa/utils/: __init__.py  ids.py  serialization.py
sdk/culpa/watchers/: __init__.py  filesystem.py
sdk/prismo/: __init__.py  cli.py  fork.py  models.py  recorder.py  replay.py
sdk/prismo/interceptors/: __init__.py  anthropic.py  litellm.py  openai.py
sdk/prismo/utils/: __init__.py  ids.py  serialization.py
sdk/prismo/watchers/: __init__.py  filesystem.py
server/: __init__.py  dependencies.py  main.py
server/api/: __init__.py  auth.py  billing.py  events.py  forks.py  sessions.py  teams.py
server/services/: __init__.py  auth.py  email.py  plans.py
server/storage/: __init__.py  database.py  repositories.py  team_repository.py  user_repository.py
tests/: test_auth.py  test_billing.py  test_email.py  test_fork.py  test_interceptors.py  test_plans.py  test_proxy.py  test_proxy_parser.py  test_recorder.py  test_replay.py  test_teams.py
